--- a/loacalsocket/src/main/AndroidManifest.xml
+++ b/loacalsocket/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.pananfly.loacalsocket">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".LocalSocketService" android:process=":socket" android:enabled="true" android:exported="false"/>
     </application>
 
 </manifest>
