--- a/loacalsocket/build.gradle
+++ b/loacalsocket/build.gradle
@@ -34,6 +34,11 @@ android {
             path "CMakeLists.txt"
         }
     }
+
+    sourceSets.main {
+        jniLibs.srcDirs 'src/main/libs'
+//        jni.srcDirs = [] // This prevents the auto generation of Android.mk
+    }
 }
 
 dependencies {
