--- a/loacalsocket/src/main/AndroidManifest.xml
+++ b/loacalsocket/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".LocalSocketService" android:process=":socket" android:enabled="true" android:exported="false"/>
-        <service android:name=".LocalSocketService2" android:process=":socket2" android:enabled="true" android:exported="false"/>
+        <service android:name=".service.LocalSocketService" android:process=":socket" android:enabled="true" android:exported="false"/>
     </application>
 
 </manifest>
