Local socket C server to java client implement by C(Server side) calling java implement, test success.

--- a/loacalsocket/CMakeLists.txt
+++ b/loacalsocket/CMakeLists.txt
@@ -15,6 +15,11 @@ add_library( ${SO_NAME}
         src/main/cpp/localsocket.c
         src/main/cpp/j4a/j4a_allclasses.c
         src/main/cpp/j4a/j4a_base.c
+        src/main/cpp/j4a/class/android/net/LocalServerSocket.c
+        src/main/cpp/j4a/class/android/net/LocalSocket.c
+        src/main/cpp/j4a/class/android/net/LocalSocketAddress.c
+        src/main/cpp/j4a/class/java/io/InputStream.c
+        src/main/cpp/j4a/class/java/io/OutputStream.c
         src/main/cpp/j4a/class/com/pananfly/loacalsocket/local_socket_helper.c
         src/main/cpp/lsocket.c
         src/main/cpp/common/jni_thread.c
@@ -36,6 +41,8 @@ include_directories(
         src/main/cpp
         src/main/cpp/common/
         src/main/cpp/j4a/class/com/pananfly/loacalsocket/
+        src/main/cpp/j4a/class/android/net/
+        src/main/cpp/j4a/class/java/io/
         )
 
 target_link_libraries( # Specifies the target library.
